made changes to home page layout

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 layout: default
 ---
 
-<div class="home">
+<section class="page-img">
+  
+</section>
+<section class="page-intro">
 
   <h1 class="page-heading">Hi! I'm <strong>Juliana N. Blaum</strong></h1>
   <p class="page-text">{{ site.description }}</p>
@@ -21,4 +24,4 @@ layout: default
   <!-- Not needed right now or at all -->
   <!-- <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
 
-</div>
+</section>
