made css changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <section class="page-img">
   <div class="j-img is-imgExpand"></div>
 </section>
-<section class="page-intro">
+<section class="page-intro is-fadedIn">
 
   <h1 class="page-heading is-fadedIn">Hi! I'm <strong>Juliana N. Blaum</strong></h1>
   <p class="page-text">{{ site.description }}</p>
